# type-safe-api

./: .gitignore  LICENSE  README.md  schema.txt  schema.yml  types.d.ts
api/: Cargo.toml
api/code_generation/: Cargo.toml
api/code_generation/src/: lib.rs
api/compiler/: Cargo.toml
api/compiler/src/: error.rs  lib.rs  main.rs
api/compiler/src/lang/: mod.rs  ts.rs
api/compiler/src/lang/ts/: class.rs  method.rs  mod.rs
api/compiler/tests/: ts.rs
api/core_types/: Cargo.toml
api/core_types/src/: lib.rs
api/examples/: Cargo.toml  example.rs  schema.yml  server.rs
compiler/: Cargo.toml
compiler/src/: main.rs
typescript-client/: client.ts  routes.ts  types.d.ts  types.ts
