[workspace]
resolver = '3'

members = [ "code_generation",'compiler', "core_types"]

[workspace.dependencies]
http = "1.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
quote = "1.0.39"
axum = "0.8.1"
syn = "2.0.100"
proc-macro2 = "1.0.94"
tokio = {version = "1.43.0",features = ["full"]}
tower = "0.5.2"
tower-http = {version="0.6.2", features = ["cors"]}
