[package]
name = "examples"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest = {version = "0.12.12",features = ["blocking","stream","json"]}
compiler = {path = "../compiler"}

[[example]]
name = "example"
path = "example.rs"

[[example]]
name = "server"
path = "server.rs"